#3; changes versioning to use polymorphism on a centralised table

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,13 @@
         "psr-4": {
             "LaravelEnso\\Versioning\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "LaravelEnso\\Versioning\\AppServiceProvider"
+            ],
+            "aliases": {}
+        }
     }
 }
