--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "5.7.*"
+        "laravel/framework": "^5.5"
     },
     "autoload": {
         "psr-4": {
