--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "6.0"
+        "laravel/framework": "^6.0"
     },
     "autoload": {
         "psr-4": {
