--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=7.4.0",
-        "laravel/framework": "^6.0 || ^7.0"
+        "laravel/framework": "^6.0 || ^7.0",
         "laravel-enso/helpers": "^1.15"
     },
     "autoload": {
