--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     ],
     "require": {
         "php": ">=7.4.0",
-        "laravel/framework": "^7.0",
-        "laravel-enso/helpers": "^2.0"
+        "laravel/framework": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
