--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0",
-        "laravel/framework": "^7.0|^8.0"
+        "php": ">=8.0",
+        "laravel/framework": "^8.0"
     },
     "autoload": {
         "psr-4": {
